update api result
